--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -4,8 +4,12 @@
     "customizer": ["./scripts/customizer.js"]
   },
   "publicPath": "/app/themes/sage",
-  "devUrl": "rock.test",
+  "devUrl": "https://rock.test/",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
-  "watch": ["app/**/*.php", "config/**/*.php", "resources/views/**/*.php"]
+  "watch": ["app/**/*.php", "config/**/*.php", "resources/views/**/*.php"],
+  "devSsl": {
+    "key": "~/ssl/localhost/server.key",
+    "crt": "~/ssl/localhost/server.crt"
+  }
 }
