--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -3,7 +3,7 @@
     "main": ["./scripts/main.js", "./styles/main.scss"],
     "customizer": ["./scripts/customizer.js"]
   },
-  "publicPath": "/app/themes/sage",
+  "publicPath": "/app/themes/first",
   "devUrl": "https://rock.test/",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
