--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
   "name": "azdanov/first",
   "type": "wordpress-theme",
-  "license": "MIT",
   "description": "WordPress theme developed with Sage",
+  "keywords": [
+    "wordpress"
+  ],
   "homepage": "https://github.com/azdanov/wordpress-first",
+  "license": "MIT",
   "authors": [
     {
       "name": "Anton Zdanov",
@@ -11,17 +14,6 @@
       "homepage": "https://github.com/azdanov"
     }
   ],
-  "keywords": [
-    "wordpress"
-  ],
-  "support": {
-    "issues": "https://github.com/azdanov/wordpress-first/issues"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/"
-    }
-  },
   "require": {
     "php": ">=7.3",
     "composer/installers": "~1.0",
@@ -31,15 +23,23 @@
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^2.8.0",
-    "roots/sage-installer": "~1.6"
+    "roots/sage-installer": "~1.6",
+    "squizlabs/php_codesniffer": "^2.8.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    }
   },
   "scripts": {
-    "test": [
-      "./vendor/bin/phpcs"
-    ],
     "post-create-project-cmd": [
       "Roots\\Sage\\Installer\\ComposerScript::postCreateProject"
+    ],
+    "test": [
+      "./vendor/bin/phpcs"
     ]
+  },
+  "support": {
+    "issues": "https://github.com/azdanov/wordpress-first/issues"
   }
 }
