feat(js): add quicklink, add process.env.NODE_ENV through webpack

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "quicklink": "^1.0.0"
   }
 }
