--- a/package.json
+++ b/package.json
@@ -38,20 +38,21 @@
   },
   "devDependencies": {
     "autoprefixer": "~8.2.0",
-    "browser-sync": "~2.24.7",
+    "browser-sync": "~2.26.3",
     "browsersync-webpack-plugin": "^0.6.0",
     "bs-html-injector": "~3.0",
-    "buble-loader": "^0.4.1",
+    "buble": "^0.19.6",
+    "buble-loader": "^0.5.1",
     "cache-loader": "~1.2.5",
     "clean-webpack-plugin": "^0.1.18",
     "copy-globs-webpack-plugin": "^0.2.0",
     "css-loader": "^0.28.9",
-    "cssnano": "~4.0.5",
-    "eslint": "5.3.0",
+    "cssnano": "~4.1.8",
+    "eslint": "5.12.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "^3.5.0",
-    "eslint-loader": "~1.9",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-loader": "~2.1.1",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.11.0",
@@ -61,18 +62,18 @@
     "imagemin-mozjpeg": "~7.0.0",
     "imagemin-webpack-plugin": "~2.2.0",
     "import-glob": "~1.5",
-    "node-sass": "~4.9.4",
+    "node-sass": "~4.11.0",
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
-    "prettier": "^1.15.3",
+    "prettier": "^1.16.1",
     "resolve-url-loader": "~2.3.1",
     "rimraf": "~2.6",
     "sass-loader": "~6.0",
     "style-loader": "^0.22.1",
-    "stylelint": "^8.4.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "tailwindcss": "^0.6.5",
+    "tailwindcss": "^0.7.3",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "untildify": "^3.0.3",
     "url-loader": "^0.6.2",
@@ -84,7 +85,6 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "quicklink": "^1.0.0"
+    "jquery": "^3.3.1"
   }
 }
