--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "node": ">= 8.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "autoprefixer": "~8.2.0",
+    "babel-loader": "^8.0.5",
     "browser-sync": "~2.26.3",
     "browsersync-webpack-plugin": "^0.6.0",
     "bs-html-injector": "~3.0",
