--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "buble": "^0.19.6",
     "buble-loader": "^0.5.1",
     "cache-loader": "~1.2.5",
-    "clean-webpack-plugin": "^0.1.18",
-    "copy-globs-webpack-plugin": "^0.2.0",
+    "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.9",
     "cssnano": "~4.1.8",
     "eslint": "5.12.1",
