--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "extract-text-webpack-plugin": "~3.0.2",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "imagemin-mozjpeg": "~7.0.0",
-    "imagemin-webpack-plugin": "~2.2.0",
+    "imagemin-mozjpeg": "~8.0.0",
+    "imagemin-webpack-plugin": "~2.4.0",
     "import-glob": "~1.5",
     "node-sass": "~4.11.0",
     "postcss-loader": "~2.1.0",
@@ -76,8 +76,8 @@
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "tailwindcss": "^0.7.3",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "tailwindcss": "^0.7.4",
+    "terser-webpack-plugin": "^1.2.1",
     "untildify": "^3.0.3",
     "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
