--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "tailwindcss": "^0.7.4",
-    "terser-webpack-plugin": "^1.2.1",
+    "uglifyjs-webpack-plugin": "1.3",
     "untildify": "^3.0.3",
     "url-loader": "^1.1.2",
     "webpack": "~3.10.0",
